[metadata]
name = naaf
author = Blik Team
author_email = blik-team@googlegroups.com
url = https://github.com/gutsche-lab/naaf
download_url = https://github.com/gutsche-lab/naaf
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE
description = IO hub for Cryo-EM, Cryo-ET and subtomogram averaging data.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities
project_urls =
    Bug Tracker = https://github.com/gutsche-lab/naaf/issues
    Documentation = https://github.com/gutsche-lab/naaf#README.md
    Source Code = https://github.com/gutsche-lab/naaf
    Changelog = https://github.com/gutsche-lab/naaf/blob/main/CHANGELOG.md

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
include_package_data = True
setup_requires =
    setuptools_scm
install_requires =
    numpy
    pandas
    scipy
    dask
    click
    pydantic
    ipython
    dynamotable==0.2.4
    mrcfile==1.3.0
    starfile==0.4.5
    emfile==0.3

[options.extras_require]
dev =
    tox
    pytest
    pytest-cov
    ipython
    black
    flake8
    isort
    pre-commit

[options.entry_points]
console_scripts =
    naaf = naaf.cli:cli

[bdist_wheel]
universal = 1

[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 120
docstring-convention = numpy
#ignore =  D100, D213, D401, D413, D107, W503

[isort]
profile = black
src_paths = naaf
